--- a/index.html
+++ b/index.html
@@ -1,48 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-      <!--=============== FONT AWESOME cdn source ===============-->
-      <link
-         rel="stylesheet"
-         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-         crossorigin="anonymous"
-         referrerpolicy="no-referrer"
-         />
-      <!--=============== MY CSS ===============-->
-      <link rel="stylesheet" href="./css/style.css" />
-      <!--=============== TITLE ===============-->
-      <title>12 - Typing Game | Bednarski Petr</title>
-   </head>
-   <body>
-      <!-- settings btn -->
-      <button class="settings-btn" id="settings-btn">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!--=============== FONT AWESOME cdn source ===============-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!--=============== MY CSS ===============-->
+    <link rel="stylesheet" href="./css/style.css" />
+    <!--=============== TITLE ===============-->
+    <title>12 - Typing Game | Bednarski Petr</title>
+  </head>
+  <body>
+    <!-- settings btn -->
+    <button class="settings-btn" id="settings-btn">
       <i class="fas fa-cog"></i>
-      </button>
-      <div class="settings" id="settings">
-         <form id="settings-form">
-            <div>
-               <label for="difficulty">Difficulty</label>
-               <select id="dificulty">
-                  <option value="easy">Easy</option>
-                  <option value="medium">Medium</option>
-                  <option value="hard">Hard</option>
-               </select>
-            </div>
-         </form>
-      </div>
-      <div class="container">
-         <h2>Speed typer</h2>
-         <small>Type the following:</small>
-         <h1 id="word"></h1>
-         <input type="text" id="text" autocomplete="off" placeholder="Type the word here..." autofocus>
-         <p class="time-container">Time left: <span id="time">10s</span></p>
-         <p class="score-container">Score: <span id="score">0</span></p>
-         <div id="end-game-container" class="end-game-container"></div>
-      </div>
-      <script src="script.js"></script>
-   </body>
+    </button>
+    <div class="settings" id="settings">
+      <form id="settings-form">
+        <div>
+          <label for="difficulty">Difficulty</label>
+          <select id="difficulty">
+            <option value="easy">Easy</option>
+            <option value="medium">Medium</option>
+            <option value="hard">Hard</option>
+          </select>
+        </div>
+      </form>
+    </div>
+    <div class="container">
+      <h2>Speed typer</h2>
+      <small>Type the following:</small>
+      <h1 id="word"></h1>
+      <input
+        type="text"
+        id="text"
+        autocomplete="off"
+        placeholder="Type the word here..."
+        autofocus
+      />
+      <p class="time-container">Time left: <span id="time">10s</span></p>
+      <p class="score-container">Score: <span id="score">0</span></p>
+      <div id="end-game-container" class="end-game-container"></div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
